@@ -1,5 +1,10 @@
 2009-07-07  Robert Dewar  <dewar@adacore.com>
 
+	* s-osprim-mingw.adb: Minor reformatting
+	Minor code reorganization
+
+2009-07-07  Robert Dewar  <dewar@adacore.com>
+
 	* prj-nmsc.adb: Minor reformatting
 
 2009-07-07  Pascal Obry  <obry@adacore.com>
